pkg/lang/syntax/testdata/ub/validate/invalid/stack/configuration-var-reference.ub
stack: {
  factory: {
    configurations: {
      aws { region: var.region }
    }
  }
  state: local {}
  encryption: noop {}
}
